1.3.12
	+ Add breadcrumbs
1.1
	+ Use new rows() and ids() API
0.12.99
	+ New release
	+ Objects can have the same or a overlapping addresss than other
	objects. However addresses of a object's member cannot overlap
0.12
	+ Use the new EBox::Model::Row API
	+ Added pageTitle to Objects model
	+ Add help to Objects model
0.11.101
	+ New release
0.11.100
	+ New release
0.11.99
	+ New release
0.11
	+ Fix bug in objectAddress when returning empty objects
0.10.99
	+ Bugfix. Check if a member with mac is a valid host 
0.10
	+ New release
0.9.100
	+ Use the new model/view framework. Now you can edit object and member
	  names.
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ Added Aragonese translation
	+ Added Dutch translation
0.8.99	
	+ New relase
0.8.1
	+ New release
0.8
	+ New release
0.7.99
        + Added portuguese translation
	+ Duplicate names are not longer allowed
0.7.1
	+ New release
0.7
	+ First public release
0.6	
	+ move to client
	+ API documented using naturaldocs
	+ Update install
	+ Update debian scripts
	+ Add ObjectsObserver abstract class