@@ -59,7 +59,6 @@ src/Makefile
 src/EBox/Makefile
 src/EBox/Model/Makefile
 src/EBox/t/Makefile
-migration/Makefile
 schemas/Makefile
 Makefile
 ])
