@@ -1,10 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-Migrationsdir = @DATADIR@/ebox-objects/migration
-
-nobase_Migrations_SCRIPTS = 0001_import_to_data_table_model.pl
-
-EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
-
-MAINTAINERCLEANFILES = Makefile.in
-
