@@ -1,3 +1,5 @@
+HEAD
+	+ Remove migration directory
 1.3.12
 	+ Add breadcrumbs
 1.1
